# dead_wars

./: Cargo.toml  index.html  magic_wars.js  magic_wars.wasm  map.json
src/: character.rs  grid.rs  main.rs  panel.rs
src/screens/: game.rs  mod.rs
static/: map.json
